rework all project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.h2.console.enabled=true
-spring.datasource.name="gt-sav-models-db"
+spring.datasource.name=gtsav-models-db
+spring.datasource.url=jdbc:h2:mem:gtsav-models
